NetBSD Problem Report #49657

From enami@sigxcpu.sm.sony.co.jp  Tue Feb 10 23:58:00 2015
Return-Path: <enami@sigxcpu.sm.sony.co.jp>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id AA55FA654C
	for <gnats-bugs@gnats.netbsd.org>; Tue, 10 Feb 2015 23:58:00 +0000 (UTC)
Message-Id: <20150210234843.7C38E2DF7F@sigxcpu.sm.sony.co.jp>
Date: Wed, 11 Feb 2015 08:48:43 +0900 (JST)
From: tsugutomo.enami@jp.sony.com
Reply-To: tsugutomo.enami@jp.sony.com
To: gnats-bugs@gnats.NetBSD.org
Subject: bge watchdog timeout on HP ML110G6
X-Send-Pr-Version: 3.95

>Number:         49657
>Category:       kern
>Synopsis:       bge watchdog timeout on HP ML110G6
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    msaitoh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Feb 11 00:00:00 +0000 2015
>Closed-Date:    Wed Jun 01 09:45:55 +0000 2016
>Last-Modified:  Wed Jun 01 09:45:55 +0000 2016
>Originator:     tsugutomo.enami@jp.sony.com
>Release:        NetBSD 7.99.4
>Organization:
>Environment:
System: NetBSD hbk0.sm.sony.co.jp 7.99.4 NetBSD 7.99.4 (GENERIC) #1: Wed Feb 11 08:21:39 JST 2015 enami@hbk0.sm.sony.co.jp:/home/enami/src/s/obj.amd64/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:
The bge(4) on HP ML110G6 sometimes hang and watchdog timer fires.  It worked with
NetBSD-5 though.  With -current, kernel build from the source as of 2013/03/16 was OK
but 2013/03/18 is not OK.

Here is dmesg of -current as of today with BGE_DEBUG defined.
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
    2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015
    The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 7.99.4 (GENERIC) #1: Wed Feb 11 08:21:39 JST 2015
	enami@hbk0.sm.sony.co.jp:/home/enami/src/s/obj.amd64/sys/arch/amd64/compile/GENERIC
total memory = 2039 MB
avail memory = 1961 MB
timecounter: Timecounters tick every 10.000 msec
timecounter: Timecounter "i8254" frequency 1193182 Hz quality 100
HP ProLiant ML110 G6 (       )
mainbus0 (root)
ACPI: RSDP 0x00000000000F6DF0 000024 (v02 PTLTD )
ACPI: XSDT 0x000000007F7A8397 00009C (v01 HP     ProLiant 06040000  LTP 00000000)
ACPI: FACP 0x000000007F7AC645 0000F4 (v03 HP     LYNNFLD  06040000 PTL  00000002)
ACPI: DSDT 0x000000007F7A8433 00418E (v01 HP     ProLiant 06040000 MSFT 03000000)
ACPI: FACS 0x000000007F7ADFC0 000040
ACPI: TCPA 0x000000007F7AC739 000032 (v01 HP     ProLiant 06040000 LOHR 0000005A)
ACPI: SSDT 0x000000007F7A0337 001404 (v01 INTEL  PPM RCM  80000001 INTL 20061109)
ACPI: SPMI 0x000000007F7AC78F 000040 (v05 HP     ProLiant 06040000 PTL  00000001)
ACPI: EINJ 0x000000007F7AC7CF 0001B0 (v01 HP     ProLiant 06040000 PTL  00000001)
ACPI: HEST 0x000000007F7AC97F 000128 (v01 HP     ProLiant 06040000 PTL  00000001)
ACPI: BERT 0x000000007F7ACAA7 000030 (v01 HP     ProLiant 06040000 PTL  00000001)
ACPI: SSDT 0x000000007F7ACAD7 0000E1 (v01 HP     ProLiant 06040000 INTL 20050624)
ACPI: ERST 0x000000007F7ACBB8 000270 (v01 HP     ProLiant 06040000 PTL  00000001)
ACPI: DMAR 0x000000007F7ACE28 000068 (v01 HP     ProLiant 06040000 LOHR 00000001)
ACPI: APIC 0x000000007F7ACE90 000084 (v01 HP     ProLiant 06040000  LTP 00000000)
ACPI: MCFG 0x000000007F7ACF14 00003C (v01 HP     ProLiant 06040000  LTP 00000000)
ACPI: HPET 0x000000007F7ACF50 000038 (v01 PTLTD  HPETTBL  06040000  LTP 00000001)
ACPI: BOOT 0x000000007F7ACF88 000028 (v01 HP     ProLiant 06040000  LTP 00000001)
ACPI: SPCR 0x000000007F7ACFB0 000050 (v01 HP     ProLiant 06040000 PTL  00000001)
ACPI: All ACPI Tables successfully acquired
cpu0 at mainbus0 apid 0
cpu0: Intel(R) Xeon(R) CPU           X3430  @ 2.40GHz, id 0x106e5
cpu1 at mainbus0 apid 2
cpu1: Intel(R) Xeon(R) CPU           X3430  @ 2.40GHz, id 0x106e5
cpu2 at mainbus0 apid 4
cpu2: Intel(R) Xeon(R) CPU           X3430  @ 2.40GHz, id 0x106e5
cpu3 at mainbus0 apid 6
cpu3: Intel(R) Xeon(R) CPU           X3430  @ 2.40GHz, id 0x106e5
ioapic0 at mainbus0 apid 1: pa 0xfec00000, version 0x20, 24 pins
acpi0 at mainbus0: Intel ACPICA 20140926
acpi0: X/RSDT: OemId <HP    ,ProLiant,06040000>, AslId < LTP,00000000>
acpi0: SCI interrupting at int 9
timecounter: Timecounter "ACPI-Fast" frequency 3579545 Hz quality 1000
hpet0 at acpi0: high precision event timer (mem 0xfed00000-0xfed00400)
timecounter: Timecounter "hpet0" frequency 14318180 Hz quality 2000
MBRD (PNP0C02) at acpi0 not configured
pcppi1 at acpi0 (SPKR, PNP0800): io 0x61
midi0 at pcppi1: PC speaker
sysbeep0 at pcppi1
attimer1 at acpi0 (TIME, PNP0100): io 0x40-0x43,0x50-0x53
COMA (PNP0501) at acpi0 not configured
MI0 (IPI0001) at acpi0 not configured
MI1 (HPQ000B) at acpi0 not configured
acpibut0 at acpi0 (PWRB, PNP0C0C): ACPI Power Button
ACPI: Enabled 3 GPEs in block 00 to 3F
ACPI Exception: AE_NOT_FOUND, While evaluating Sleep State [\_S1_] (20140926/hwxface-646)
ACPI Exception: AE_NOT_FOUND, While evaluating Sleep State [\_S2_] (20140926/hwxface-646)
ACPI Exception: AE_NOT_FOUND, While evaluating Sleep State [\_S3_] (20140926/hwxface-646)
attimer1: attached to pcppi1
ipmi0 at mainbus0
pci0 at mainbus0 bus 0: configuration mode 1
pci0: i/o space, memory space enabled, rd/line, rd/mult, wr/inv ok
pchb0 at pci0 dev 0 function 0: vendor 8086 product d130 (rev. 0x11)
ppb0 at pci0 dev 3 function 0: vendor 8086 product d138 (rev. 0x11)
ppb0: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x4 @ 5.0GT/s
pci1 at ppb0 bus 1
pci1: i/o space, memory space enabled, rd/line, wr/inv ok
vendor 8086 product d155 (miscellaneous system, revision 0x11) at pci0 dev 8 function 0 not configured
vendor 8086 product d156 (miscellaneous system, revision 0x11) at pci0 dev 8 function 1 not configured
vendor 8086 product d157 (miscellaneous system, revision 0x11) at pci0 dev 8 function 2 not configured
vendor 8086 product d158 (miscellaneous system, revision 0x11) at pci0 dev 8 function 3 not configured
vendor 8086 product d150 (miscellaneous system, revision 0x11) at pci0 dev 16 function 0 not configured
vendor 8086 product d151 (miscellaneous system, revision 0x11) at pci0 dev 16 function 1 not configured
ehci0 at pci0 dev 26 function 0: vendor 8086 product 3b3c (rev. 0x05)
ehci0: interrupting at ioapic0 pin 16
ehci0: EHCI version 1.0
usb0 at ehci0: USB revision 2.0
ppb1 at pci0 dev 28 function 0: vendor 8086 product 3b42 (rev. 0x05)
ppb1: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x1 @ 2.5GT/s
pci2 at ppb1 bus 16
pci2: i/o space, memory space enabled, rd/line, wr/inv ok
ppb2 at pci0 dev 28 function 1: vendor 8086 product 3b44 (rev. 0x05)
ppb2: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x1 @ 2.5GT/s
pci3 at ppb2 bus 26
pci3: i/o space, memory space enabled, rd/line, wr/inv ok
ppb3 at pci0 dev 28 function 2: vendor 8086 product 3b46 (rev. 0x05)
ppb3: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x1 @ 2.5GT/s
pci4 at ppb3 bus 28
pci4: i/o space, memory space enabled, rd/line, wr/inv ok
vga0 at pci4 dev 0 function 0: vendor 102b product 0522 (rev. 0x02)
wsdisplay0 at vga0 kbdmux 1: console (80x25, vt100 emulation)
wsmux1: connecting to wsdisplay0
drm at vga0 not configured
ppb4 at pci0 dev 28 function 3: vendor 8086 product 3b48 (rev. 0x05)
ppb4: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x1 @ 2.5GT/s
pci5 at ppb4 bus 30
pci5: i/o space, memory space enabled, rd/line, wr/inv ok
bge0 at pci5 dev 0 function 0: Broadcom BCM5723 Gigabit Ethernet
bge0: interrupting at ioapic0 pin 19
bge0: HW config 000001d1, 0000c011, 00002830, 00000000 00000000
bge0: ASIC BCM5784 A1 (0x5784100), Ethernet address d4:85:64:XX:XX:XX
bge0: setting short Tx thresholds
brgphy0 at bge0 phy 1: BCM5784 10/100/1000baseT PHY, rev. 4
brgphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto
Hardware Flags:
 - 5755 Plus
 - 575X Plus
 - 5705 Plus
 - PCI Express Bus
 - CPMU
 - TSO
 - jitter bug
ppb5 at pci0 dev 28 function 4: vendor 8086 product 3b4a (rev. 0x05)
ppb5: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x4 @ 2.5GT/s
pci6 at ppb5 bus 32
pci6: i/o space, memory space enabled, rd/line, wr/inv ok
ehci1 at pci0 dev 29 function 0: vendor 8086 product 3b34 (rev. 0x05)
ehci1: interrupting at ioapic0 pin 23
ehci1: EHCI version 1.0
usb1 at ehci1: USB revision 2.0
ppb6 at pci0 dev 30 function 0: vendor 8086 product 244e (rev. 0xa5)
pci7 at ppb6 bus 48
pci7: i/o space, memory space enabled
ichlpcib0 at pci0 dev 31 function 0: vendor 8086 product 3b14 (rev. 0x05)
timecounter: Timecounter "ichlpcib0" frequency 3579545 Hz quality 1000
ichlpcib0: 24-bit timer
ichlpcib0: TCO (watchdog) timer configured.
gpio0 at ichlpcib0: 64 pins
ahcisata0 at pci0 dev 31 function 2: vendor 8086 product 3b22 (rev. 0x05)
ahcisata0: interrupting at ioapic0 pin 18
ahcisata0: 64-bit DMA
ahcisata0: AHCI revision 1.30, 6 ports, 32 slots, CAP 0xe322ff05<PSC,SSC,PMD,SPM,ISS=0x2=Gen2,SCLO,SAL,SSNTF,SNCQ,S64A>
atabus0 at ahcisata0 channel 0
atabus1 at ahcisata0 channel 1
atabus2 at ahcisata0 channel 2
atabus3 at ahcisata0 channel 3
atabus4 at ahcisata0 channel 4
atabus5 at ahcisata0 channel 5
ichsmb0 at pci0 dev 31 function 3: vendor 8086 product 3b30 (rev. 0x05)
ichsmb0: interrupting at ioapic0 pin 18
iic0 at ichsmb0: I2C bus
isa0 at ichlpcib0
com0 at isa0 port 0x3f8-0x3ff irq 4: ns16550a, working fifo
pckbc0 at isa0 port 0x60-0x64
pckbc: cmd word write error
acpicpu0 at cpu0: ACPI CPU
acpicpu0: C1: HLT, lat   0 us, pow     0 mW
acpicpu0: P0: FFH, lat  10 us, pow 95000 mW, 2394 MHz
acpicpu0: P1: FFH, lat  10 us, pow 78000 mW, 2261 MHz
acpicpu0: P2: FFH, lat  10 us, pow 63000 mW, 2128 MHz
acpicpu0: P3: FFH, lat  10 us, pow 57000 mW, 1995 MHz
acpicpu0: P4: FFH, lat  10 us, pow 46000 mW, 1862 MHz
acpicpu0: P5: FFH, lat  10 us, pow 36000 mW, 1729 MHz
acpicpu0: P6: FFH, lat  10 us, pow 32000 mW, 1596 MHz
acpicpu0: P7: FFH, lat  10 us, pow 25000 mW, 1463 MHz
acpicpu0: P8: FFH, lat  10 us, pow 19000 mW, 1330 MHz
acpicpu0: P9: FFH, lat  10 us, pow 17000 mW, 1197 MHz
acpicpu0: T0: FFH, lat   1 us, pow   760 mW, 100 %
acpicpu0: T1: FFH, lat   1 us, pow   665 mW,  88 %
acpicpu0: T2: FFH, lat   1 us, pow   570 mW,  75 %
acpicpu0: T3: FFH, lat   1 us, pow   475 mW,  63 %
acpicpu0: T4: FFH, lat   1 us, pow   380 mW,  50 %
acpicpu0: T5: FFH, lat   1 us, pow   285 mW,  38 %
acpicpu0: T6: FFH, lat   1 us, pow   190 mW,  25 %
acpicpu0: T7: FFH, lat   1 us, pow    95 mW,  13 %
coretemp0 at cpu0: thermal sensor, 1 C resolution
acpicpu1 at cpu1: ACPI CPU
coretemp1 at cpu1: thermal sensor, 1 C resolution
acpicpu2 at cpu2: ACPI CPU
coretemp2 at cpu2: thermal sensor, 1 C resolution
acpicpu3 at cpu3: ACPI CPU
coretemp3 at cpu3: thermal sensor, 1 C resolution
timecounter: Timecounter "clockinterrupt" frequency 100 Hz quality 0
timecounter: Timecounter "TSC" frequency 2394138680 Hz quality 3000
IPsec: Initialized Security Association Processing.
uhub0 at usb0: vendor 8086 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
uhub0: 2 ports with 2 removable, self powered
uhub1 at usb1: vendor 8086 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
uhub1: 2 ports with 2 removable, self powered
ahcisata0 port 0: device present, speed: 3.0Gb/s
ahcisata0 port 2: device present, speed: 3.0Gb/s
ahcisata0 port 4: device present, speed: 1.5Gb/s
wd0 at atabus0 drive 0
wd0: <Hitachi HDS723020BLA642>
wd0: drive supports 16-sector PIO transfers, LBA48 addressing
wd0: 1863 GB, 3876021 cyl, 16 head, 63 sec, 512 bytes/sect x 3907029168 sectors
wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133)
wd0(ahcisata0:0:0): using PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133) (using DMA)
wd1 at atabus2 drive 0
wd1: <Hitachi HDS723020BLA642>
wd1: drive supports 16-sector PIO transfers, LBA48 addressing
wd1: 1863 GB, 3876021 cyl, 16 head, 63 sec, 512 bytes/sect x 3907029168 sectors
wd1: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133)
wd1(ahcisata0:2:0): using PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133) (using DMA)
atapibus0 at atabus4: 1 targets
cd0 at atapibus0 drive 0: <hp       DVDROM DH20N, K6CA7H34307, EB00> cdrom removable
cd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 5 (Ultra/100)
cd0(ahcisata0:4:0): using PIO mode 4, DMA mode 2, Ultra-DMA mode 5 (Ultra/100) (using DMA)
uhub2 at uhub1 port 1: vendor 8087 product 0020, class 9/0, rev 2.00/0.00, addr 2
uhub2: single transaction translator
uhub3 at uhub0 port 1: vendor 8087 product 0020, class 9/0, rev 2.00/0.00, addr 2
uhub3: single transaction translator
uhub3: 6 ports with 6 removable, self powered
uhub2: 8 ports with 8 removable, self powered
uhidev0 at uhub2 port 1 configuration 1 interface 0
uhidev0: ServerEngines SE USB Device, rev 1.10/0.01, addr 3, iclass 3/1
ukbd0 at uhidev0: 8 modifier keys, 6 key codes
uhidev1 at uhub3 port 4 configuration 1 interface 0
uhidev1: Dell Dell QuietKey Keyboard, rev 1.10/1.77, addr 3, iclass 3/1
ukbd1 at uhidev1: 8 modifier keys, 6 key codes
wskbd0 at ukbd0 mux 1
wskbd0: connecting to wsdisplay0
uhidev2 at uhub2 port 1 configuration 1 interface 1
uhidev2: ServerEngines SE USB Device, rev 1.10/0.01, addr 3, iclass 3/1
ums0 at uhidev2: 8 buttons and Z dir
wsmouse0 at ums0 mux 0
wskbd1 at ukbd1 mux 1
wskbd1: connecting to wsdisplay0
Kernelized RAIDframe activated
pad0: outputs: 44100Hz, 16-bit, stereo
audio0 at pad0: half duplex, playback, capture
WARNING: findroot: double match for boot device (wd0, wd1)
raid0: RAID Level 1
raid0: Components: /dev/wd1a /dev/wd0a
raid0: Total Sectors: 3907026944 (1907728 MB)
boot device: raid0
root on raid0a dumps on raid0b
root file system type: ffs
kern.module.path=/stand/amd64/7.99.4/modules
wsdisplay0: screen 1 added (80x25, vt100 emulation)
wsdisplay0: screen 2 added (80x25, vt100 emulation)
wsdisplay0: screen 3 added (80x25, vt100 emulation)
wsdisplay0: screen 4 added (80x25, vt100 emulation)
ipmi0: version 2.0 interface KCS iobase 0xca2/2 spacing 1
bge0: watchdog timeout -- resetting

>How-To-Repeat:
Run recent kernel on HP ML110G6.  Make some traffic through the device.
I used ttcp like below.

seq 1000 | while read i; do ttcp -t -s otherhost; done
>Fix:
Not yet known.

>Release-Note:

>Audit-Trail:
From: tsugutomo.enami@jp.sony.com
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/49657: bge watchdog timeout on HP ML110G6
Date: Tue, 17 Feb 2015 15:48:30 +0900

 > The bge(4) on HP ML110G6 sometimes hang and watchdog timer fires.  It
 > worked with NetBSD-5 though.  With -current, kernel build from the
 > source as of 2013/03/16 was OK but 2013/03/18 is not OK.

 It looks like the cause of watchdog timeout is newly added
 bge_asf_driver_up() call in bge_tick() in rev. 1.216 (see cited diff
 below).  If I comment out the line, no watchdog timeout occurs.

 I guess some locking is necessary.  Linux's tg3.c has tp->lock.

 enami.

 | diff -u -p -r1.215 -r1.216
 | --- if_bge.c	14 Mar 2013 18:49:20 -0000	1.215
 | +++ if_bge.c	17 Mar 2013 04:06:39 -0000	1.216

 	:

 | @@ -3855,6 +4393,8 @@ bge_tick(void *xsc)
 |  			mii_tick(mii);
 |  	}
 |  
 | +	bge_asf_driver_up(sc);
 | +
 |  	callout_reset(&sc->bge_timeout, hz, bge_tick, sc);
 |  
 |  	splx(s);

From: tsugutomo.enami@jp.sony.com
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/49657: bge watchdog timeout on HP ML110G6
Date: Wed, 18 Feb 2015 08:42:31 +0900

 Output from bge_debug_info() in if_bge.c rev. 1.280 is here:

 Hardware Flags:
  - 5755 Plus
  - 575X Plus
  - 5705 Plus
  - PCI Express Bus
  - CPMU
  - TSO
  - jitter bug
  - ASF enable
  - ASF new handshake
  - ASF stackup

 enami.

Responsible-Changed-From-To: kern-bug-people->msaitoh
Responsible-Changed-By: msaitoh@NetBSD.org
Responsible-Changed-When: Sun, 26 Apr 2015 11:51:18 +0000
Responsible-Changed-Why:
mine


From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49657 CVS commit: src/sys/dev/pci
Date: Thu, 30 Apr 2015 16:09:06 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Thu Apr 30 16:09:06 UTC 2015

 Modified Files:
 	src/sys/dev/pci: if_bge.c if_bgereg.h

 Log Message:
  Use another firmware command in bge_asf_driver_up(). This change fixes
 a bug that watchdog timeout occurs every 20-30 minutes on HP ML110 G6
 reported enami@ in PR#49657.


 To generate a diff of this commit:
 cvs rdiff -u -r1.284 -r1.285 src/sys/dev/pci/if_bge.c
 cvs rdiff -u -r1.89 -r1.90 src/sys/dev/pci/if_bgereg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49657 CVS commit: [netbsd-7] src/sys/dev/pci
Date: Sat, 9 May 2015 08:37:53 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sat May  9 08:37:53 UTC 2015

 Modified Files:
 	src/sys/dev/pci [netbsd-7]: if_bge.c if_bgereg.h

 Log Message:
 Pull up following revision(s) (requested by msaitoh in ticket #740):
 	sys/dev/pci/if_bge.c: revision 1.285
 	sys/dev/pci/if_bgereg.h: revision 1.90
 Use another firmware command in bge_asf_driver_up(). Same as Lunux.
 This change fixes a bug that watchdog timeout occurs every 25-30 minutes
 on HP ML110 G6 reported enami@ in PR#49657.


 To generate a diff of this commit:
 cvs rdiff -u -r1.277.2.1 -r1.277.2.2 src/sys/dev/pci/if_bge.c
 cvs rdiff -u -r1.88 -r1.88.2.1 src/sys/dev/pci/if_bgereg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Wed, 01 Jun 2016 09:45:55 +0000
State-Changed-Why:
iFix was committed by msaitoh on Apr 30 16:09:06 UTC 2015 and pullups completed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.